# AI-Powered-Insurance-Fraud-Detection-System

./: .gitignore  README.md  demo.py  pyproject.toml  setup.py
src/logger/: __init__.py
